--- a/css/style@media.css
+++ b/css/style@media.css
@@ -21,6 +21,14 @@ html {
 	overflow-x: hidden;
 }
 
+html.htmlfire {
+	overflow: hidden;
+}
+
+.html.htmlfire {
+	overflow: hidden;
+}
+
 .headersp .burgmenu.sp {
 	padding-bottom: 6px;
 	padding-left: 5px;
