--- a/css/style.css
+++ b/css/style.css
@@ -594,15 +594,16 @@ body {
 	transition: .3s;
 }
 
-.news-content-txtwrap .main-txt p {
+.news-content-txtwrap .main-txt span {
 	color: #fff;
+	display: block;
 	font-size: 16px;
 	line-height: 27px;
 	margin-bottom: 18px;
 	position: relative;
 }
 
-.news-content-txtwrap .main-txt p::before {
+.news-content-txtwrap .main-txt span::before {
 	background-color: #fff;
 	bottom: -8px;
 	content: '';
@@ -612,8 +613,9 @@ body {
 	width: 100%;
 }
 
-.news-content-txtwrap .sub-txt p {
+.news-content-txtwrap .sub-txt span {
 	color: #fff;
+	display: block;
 	font-size: 13px;
 	font-weight: lighter;
 	line-height: 2;
@@ -706,14 +708,14 @@ body {
 	width: 100%;
 }
 
-.ttlwrap p {
+.ttlwrap .span {
 	display: block;
 	font-size: 20px;
 	line-height: 2;
 	padding-top: 4px;
 }
 
-.ttlwrap p .span1 {
+.ttlwrap .span .span1 {
 	color: #191919;
 	display: block;
 	font-weight: bold;
@@ -721,7 +723,7 @@ body {
 	margin-bottom: 24px;
 }
 
-.ttlwrap p .span2 {
+.ttlwrap .span .span2 {
 	color: #00c1d2;
 	display: block;
 	font-family: "Josefin Sans";
@@ -734,7 +736,7 @@ body {
 	position: absolute;
 }
 
-.subwrap p {
+.subwrap .span {
 	color: #6d8495;
 	font-family: "Josefin Sans", sans-serif;
 	font-size: 13px;
@@ -743,14 +745,14 @@ body {
 	position: relative;
 }
 
-.subwrap p span {
+.subwrap .span span {
 	background-color: #fff;
 	font-family: "Josefin Sans", sans-serif;
 	letter-spacing: 1px;
 	position: relative;
 }
 
-.subwrap p::before {
+.subwrap .span::before {
 	border-top: 2px dotted #BDC8CF;
 	content: '';
 	height: 2px;
@@ -2509,14 +2511,14 @@ body {
 	width: 100%;
 }
 
-.itninfo-txtwrap .ttlwrap p {
+.itninfo-txtwrap .ttlwrap .span {
 	display: block;
 	font-size: 20px;
 	line-height: 2;
 	padding-top: 4px;
 }
 
-.itninfo-txtwrap .ttlwrap p .span1 {
+.itninfo-txtwrap .ttlwrap .span .span1 {
 	color: #fff;
 	display: block;
 	font-weight: bold;
@@ -2524,7 +2526,7 @@ body {
 	margin-bottom: 0px;
 }
 
-.itninfo-txtwrap .ttlwrap p .span2 {
+.itninfo-txtwrap .ttlwrap .span .span2 {
 	color: #fff;
 	display: block;
 	font-size: 13px;
@@ -2540,8 +2542,9 @@ body {
 	width: 186px;
 }
 
-.subwrap.itn p {
+.subwrap.itn .span {
 	color: #fff;
+	display: block;
 	font-size: 13px;
 	line-height: 2;
 	padding-left: 0;
@@ -2550,7 +2553,7 @@ body {
 	width: 100%;
 }
 
-.subwrap.itn p span {
+.subwrap.itn .span span {
 	background-color: #51C2D2;
 	color: #fff;
 	font-family: "Josefin Sans", sans-serif;
@@ -2559,7 +2562,7 @@ body {
 	padding-left: 6px;
 }
 
-.subwrap.itn p::before {
+.subwrap.itn .span::before {
 	border-top: 2px dotted #fff;
 	content: '';
 	position: absolute;
@@ -2855,6 +2858,7 @@ body {
 
 .oc-comp-txt {
 	color: #191919;
+	display: block;
 	font-size: 13px;
 	line-height: 2;
 	margin: 20px 0;
