--- a/css/style@media.css
+++ b/css/style@media.css
@@ -1925,7 +1925,7 @@ _:future,
 }
 
 .oc-under-linkwrap.contact .oc-link-txt-outer {
-	display: inline;
+	display: block;
 	justify-content: center;
 }
 
