update: aタグ内txtwrap内のspan(元pタグ)を削除・スタイル修正

--- a/css/style.css
+++ b/css/style.css
@@ -122,12 +122,12 @@ body {
 	justify-content: space-between;
 }
 
-.main-link-wrap .main-link-wrap-li {
+.main-link-wrap-li {
 	height: 100%;
 	position: relative;
 }
 
-.main-link-wrap .main-link-wrap-li > a {
+.main-link-wrap-li > a {
 	align-items: center;
 	background-color: #51C2D1;
 	border-right: 2px dotted #fff;
@@ -139,11 +139,11 @@ body {
 	width: 180px;
 }
 
-.main-link-wrap .main-link-wrap-li > a:hover {
+.main-link-wrap-li > a:hover {
 	background-color: #ED6FB0;
 }
 
-.main-link-wrap .main-link-wrap-li > a span {
+.main-link-wrap-li > a span {
 	border-bottom: 3px solid #fff;
 	color: #fff;
 	font-size: 12px;
@@ -153,15 +153,15 @@ body {
 	position: relative;
 }
 
-.main-link-wrap .main-link-wrap-li > a.selected {
+.main-link-wrap-li > a.selected {
 	background-color: #ED6FB0;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) {
+.main-link-wrap-li:nth-of-type(1) {
 	width: 200px;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) > a {
+.main-link-wrap-li:nth-of-type(1) > a {
 	background-color: transparent;
 	position: relative;
 	transition: .3s;
@@ -169,7 +169,7 @@ body {
 	z-index: 0;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) > a::before {
+.main-link-wrap-li:nth-of-type(1) > a::before {
 	background: linear-gradient(119deg, transparent 0%, transparent 40px, #51C2D1 40px, #51C2D1 100%);
 	content: '';
 	height: 100%;
@@ -181,7 +181,7 @@ body {
 	z-index: -1;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) > a::after {
+.main-link-wrap-li:nth-of-type(1) > a::after {
 	background: linear-gradient(119deg, transparent 0%, transparent 40px, #ED6FB0 40px, #ED6FB0 100%);
 	content: '';
 	height: 100%;
@@ -193,35 +193,35 @@ body {
 	z-index: -2;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) > a:hover::before {
+.main-link-wrap-li:nth-of-type(1) > a:hover::before {
 	opacity: 0;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) > a span {
+.main-link-wrap-li:nth-of-type(1) > a span {
 	margin-bottom: 3px;
 	margin-left: 50px;
 	margin-right: 16px;
 	padding-bottom: 3px;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) .sub-link {
+.main-link-wrap-li:nth-of-type(1) .sub-link {
 	width: 100%;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) .sub-link-wrap {
+.main-link-wrap-li:nth-of-type(1) .sub-link-wrap {
 	left: 4px;
 	width: 196px;
 }
 
-.main-link-wrap .main-link-wrap-li:nth-of-type(1) .sub-link-wrap a {
+.main-link-wrap-li:nth-of-type(1) .sub-link-wrap a {
 	width: 100%;
 }
 
-.main-link-wrap .main-link-wrap-li .hassub {
+.main-link-wrap-li .hassub {
 	position: relative;
 }
 
-.main-link-wrap .main-link-wrap-li .hassub::before {
+.main-link-wrap-li .hassub::before {
 	background-image: url("../img/imgs0/ico_arrow01.png");
 	content: '';
 	height: 11px;
@@ -232,15 +232,15 @@ body {
 	width: 16px;
 }
 
-.main-link-wrap .main-link-wrap-li .ml22 {
+.main-link-wrap-li .ml22 {
 	margin-left: 22px;
 }
 
-.main-link-wrap .main-link-wrap-li:last-child > a {
+.main-link-wrap-li:last-child > a {
 	border-right: 0 solid #000;
 }
 
-.main-link-wrap .main-link-wrap-li .sub-link-wrap {
+.main-link-wrap-li .sub-link-wrap {
 	border-left: 2px dotted #fff;
 	border-right: 2px dotted #fff;
 	left: 0;
@@ -252,17 +252,17 @@ body {
 	z-index: 10;
 }
 
-.main-link-wrap .main-link-wrap-li .sub-link-wrap.fire {
+.main-link-wrap-li .sub-link-wrap.fire {
 	display: block;
 	opacity: 1;
 	visibility: visible;
 }
 
-.main-link-wrap .main-link-wrap-li .sub-link-wrap.fire.notfire {
+.main-link-wrap-li .sub-link-wrap.fire.notfire {
 	display: none;
 }
 
-.main-link-wrap .main-link-wrap-li .sub-link {
+.main-link-wrap-li .sub-link {
 	align-items: center;
 	background-color: #F5F5F5;
 	border-bottom: 2px dotted #fff;
@@ -276,26 +276,26 @@ body {
 	width: 176px;
 }
 
-.main-link-wrap .main-link-wrap-li .sub-link:hover {
+.main-link-wrap-li .sub-link:hover {
 	background-color: #DFE5EA;
 	color: #54C4D3;
 }
 
-.main-link-wrap .main-link-wrap-li .sub-link.nyusi.fire {
+.main-link-wrap-li .sub-link.nyusi.fire {
 	display: block;
 }
 
-.main-link-wrap .main-link-wrap-li .sub-link .imgwrap {
+.main-link-wrap-li .sub-link .imgwrap {
 	display: inline-block;
 	margin-left: 4px;
 	width: 14px;
 }
 
-.main-link-wrap .main-link-wrap-li .sub-link-wrap.nyusi > li {
+.main-link-wrap-li .sub-link-wrap.nyusi > li {
 	position: relative;
 }
 
-.main-link-wrap .main-link-wrap-li .nyusi-sublink-wrap {
+.main-link-wrap-li .nyusi-sublink-wrap {
 	border-left: 2px dotted #fff;
 	border-right: 2px dotted #fff;
 	left: 176px;
@@ -307,13 +307,13 @@ body {
 	z-index: 3;
 }
 
-.main-link-wrap .main-link-wrap-li .nyusi-sublink-wrap.fire {
+.main-link-wrap-li .nyusi-sublink-wrap.fire {
 	display: block;
 	opacity: 1;
 	visibility: visible;
 }
 
-.main-link-wrap .main-link-wrap-li .nyusi-sublink {
+.main-link-wrap-li .nyusi-sublink {
 	background-color: #DFE5EA;
 	border-bottom: 2px dotted #fff;
 	border-right: 2px dotted #fff;
@@ -322,11 +322,11 @@ body {
 	width: 180px;
 }
 
-.main-link-wrap .main-link-wrap-li .nyusi-sublink:hover {
+.main-link-wrap-li .nyusi-sublink:hover {
 	background-color: #d3d9dd;
 }
 
-.main-link-wrap .main-link-wrap-li .nyusi-sublink a {
+.main-link-wrap-li .nyusi-sublink a {
 	align-items: center;
 	color: #000;
 	display: flex;
@@ -594,26 +594,18 @@ body {
 	transition: .3s;
 }
 
-.news-content-txtwrap .main-txt span {
+.news-content-txtwrap .main-txt {
+	border-bottom: 3px solid #fff;
 	color: #fff;
 	display: block;
 	font-size: 16px;
 	line-height: 27px;
-	margin-bottom: 18px;
+	margin-bottom: 10px;
+	padding-bottom: 8px;
 	position: relative;
 }
 
-.news-content-txtwrap .main-txt span::before {
-	background-color: #fff;
-	bottom: -8px;
-	content: '';
-	height: 3px;
-	left: 0;
-	position: absolute;
-	width: 100%;
-}
-
-.news-content-txtwrap .sub-txt span {
+.news-content-txtwrap .sub-txt {
 	color: #fff;
 	display: block;
 	font-size: 13px;
@@ -691,76 +683,59 @@ body {
 .ttlwrap {
 	align-items: center;
 	display: flex;
-	height: 72px;
+	flex-direction: column;
 	margin-bottom: 15px;
 	position: relative;
 	width: 170px;
 }
 
-.ttlwrap::before {
-	background-color: #51C2D2;
-	content: '';
-	height: 3px;
-	left: 0;
-	position: absolute;
-	top: 58%;
-	transform: translateY(-50%);
-	width: 100%;
-}
-
-.ttlwrap .span {
-	display: block;
-	font-size: 20px;
-	line-height: 2;
-	padding-top: 4px;
-}
-
-.ttlwrap .span .span1 {
+.ttlwrap .span1 {
+	border-bottom: 3px solid #51C2D2;
 	color: #191919;
 	display: block;
 	font-weight: bold;
 	letter-spacing: 2px;
-	margin-bottom: 24px;
+	margin-bottom: 12px;
+	padding-bottom: 12px;
+	width: 100%;
 }
 
-.ttlwrap .span .span2 {
+.ttlwrap .span2 {
 	color: #00c1d2;
 	display: block;
 	font-family: "Josefin Sans";
 	font-size: 12px;
 	letter-spacing: .7px;
+	width: 100%;
 }
 
 .subwrap {
 	bottom: 38px;
+	display: flex;
+	justify-content: flex-end;
 	position: absolute;
+	width: 104px;
 }
 
-.subwrap .span {
-	color: #6d8495;
-	font-family: "Josefin Sans", sans-serif;
-	font-size: 13px;
-	line-height: 2;
-	padding-left: 60px;
-	position: relative;
-}
-
-.subwrap .span span {
-	background-color: #fff;
-	font-family: "Josefin Sans", sans-serif;
-	letter-spacing: 1px;
-	position: relative;
-}
-
-.subwrap .span::before {
+.subwrap::before {
 	border-top: 2px dotted #BDC8CF;
 	content: '';
-	height: 2px;
 	left: 0;
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
 	width: 48px;
+}
+
+.subwrap span {
+	background-color: #fff;
+	color: #6d8495;
+	font-family: "Josefin Sans", sans-serif;
+	font-size: 13px;
+	letter-spacing: 1px;
+	letter-spacing: .8px;
+	line-height: 23px;
+	position: relative;
 }
 
 .international {
@@ -2494,21 +2469,11 @@ body {
 .itninfo-txtwrap .ttlwrap {
 	align-items: center;
 	display: flex;
+	flex-direction: column;
 	height: 72px;
 	margin-bottom: 0px;
 	position: relative;
 	width: 170px;
-}
-
-.itninfo-txtwrap .ttlwrap::before {
-	background-color: #fff;
-	content: '';
-	height: 3px;
-	left: 0;
-	position: absolute;
-	top: 36%;
-	transform: translateY(-50%);
-	width: 100%;
 }
 
 .itninfo-txtwrap .ttlwrap .span {
@@ -2518,21 +2483,27 @@ body {
 	padding-top: 4px;
 }
 
-.itninfo-txtwrap .ttlwrap .span .span1 {
+.itninfo-txtwrap .ttlwrap .span1 {
+	border-bottom: 3px solid #fff;
 	color: #fff;
 	display: block;
+	font-size: 20px;
 	font-weight: bold;
 	letter-spacing: 2px;
 	margin-bottom: 0px;
+	margin-bottom: 10px;
+	padding-bottom: 10px;
+	text-align: left;
+	width: 100%;
 }
 
-.itninfo-txtwrap .ttlwrap .span .span2 {
+.itninfo-txtwrap .ttlwrap .span2 {
 	color: #fff;
 	display: block;
 	font-size: 13px;
 	letter-spacing: .7px;
 	line-height: 2;
-	padding-top: 20px;
+	width: 100%;
 }
 
 .subwrap.itn {
@@ -2543,6 +2514,7 @@ body {
 }
 
 .subwrap.itn .span {
+	background-color: transparent;
 	color: #fff;
 	display: block;
 	font-size: 13px;
@@ -2569,7 +2541,7 @@ body {
 	right: 0;
 	top: 50%;
 	transform: translateY(-50%);
-	width: 170px;
+	width: 100%;
 }
 
 .underlayer-news .twin-col-left {
