--- a/css/style.css
+++ b/css/style.css
@@ -86,13 +86,13 @@ body {
 	margin-bottom: 58px;
 }
 
-.header .container {
+.header .header-container {
 	background: linear-gradient(119deg, transparent 0%, transparent 432px, #51C2D1 432px, #51C2D1 100%);
 	height: 70px;
 	min-width: 1358px;
 }
 
-.header .wrapper {
+.header .header-wrapper {
 	display: -ms-flex;
 	display: flex;
 	justify-content: space-between;
@@ -113,6 +113,10 @@ body {
 	top: 20px;
 	width: 275px;
 	z-index: 11;
+}
+
+.logo .imgwrap a {
+	display: block;
 }
 
 .main-link-wrap {
@@ -476,7 +480,7 @@ body {
 	margin-bottom: 50px;
 }
 
-.news .wrapper {
+.news .news-wrapper {
 	margin: auto;
 	width: 1100px;
 }
@@ -742,7 +746,7 @@ body {
 	margin-bottom: 44px;
 }
 
-.international .wrapper {
+.international .international-wrapper {
 	background-color: #F0F2F4;
 	margin: auto;
 	outline: 5px solid #fff;
@@ -892,7 +896,7 @@ body {
 	padding: 0 20px;
 }
 
-.opencampus .wrapper {
+.opencampus .opencampus-wrapper {
 	margin: auto;
 	width: 1300px;
 }
@@ -995,7 +999,7 @@ body {
 	position: relative;
 }
 
-.footer .wrapper {
+.footer .f-wrapper {
 	margin: auto;
 	min-width: 1100px;
 	width: 1100px;
@@ -2787,7 +2791,7 @@ body {
 	padding-top: 60px;
 }
 
-.opencampus.contact .wrapper {
+.opencampus.contact .opencampus-wrapper {
 	width: 1100px;
 }
 
