--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ body {
 	margin-bottom: 50px;
 }
 
-.news .news-wrapper {
+.news-wrapper {
 	margin: auto;
 	width: 1100px;
 }
@@ -746,7 +746,7 @@ body {
 	margin-bottom: 44px;
 }
 
-.international .international-wrapper {
+.international-wrapper {
 	background-color: #F0F2F4;
 	margin: auto;
 	outline: 5px solid #fff;
@@ -896,7 +896,7 @@ body {
 	padding: 0 20px;
 }
 
-.opencampus .opencampus-wrapper {
+.opencampus-wrapper {
 	margin: auto;
 	width: 1300px;
 }
@@ -1090,6 +1090,10 @@ body {
 	width: 14px;
 }
 
+.f-sub-link a:hover {
+	opacity: .6;
+}
+
 .pager-link {
 	-ms-align-items: center;
 	align-items: center;
@@ -1121,6 +1125,10 @@ body {
 	display: inline-block;
 	margin-left: 4px;
 	width: 14px;
+}
+
+.pager-link a:hover {
+	opacity: .8;
 }
 
 .footer-share {
@@ -1612,7 +1620,7 @@ body {
 	width: 75%;
 }
 
-.howto-right-container .howto-right-wrapper {
+.howto-right-wrapper {
 	position: relative;
 	z-index: 2;
 }
